blockml/test/valid/07_where_refs_dim/v17/v17d.dashboard
dashboard: v17d
title: 'sales'
reports:
- title: 'weekly'
  model: v17m
  select:
  - a.dim6
  type: 'table'

